--- a/index.html
+++ b/index.html
@@ -144,28 +144,33 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
             an opening and closing set of slash asterisks for block comments.
         */
 
+        $(function() {
 
-        if (document.getElementsByClassName('flex-item').length === 0) {
-            document.getElementById('topContacts').style.backgroundColor = 'black';
-        }
-        if (document.getElementsByTagName('h1').length === 0) {
-            document.getElementById('header').style.backgroundColor = 'black';
-        }
-        if (document.getElementsByClassName('work-entry').length === 0) {
-            document.getElementById('workExperience').style.backgroundColor = 'black';
-        }
-        if (document.getElementsByClassName('project-entry').length === 0) {
-            document.getElementById('projects').style.backgroundColor = 'black';
-        }
-        if (document.getElementsByClassName('education-entry').length === 0) {
-            document.getElementById('education').style.backgroundColor = 'black';
-        }
-        if (document.getElementsByClassName('flex-item').length === 0) {
-            document.getElementById('lets-connect').style.backgroundColor = 'black';
-        }
-        if (document.getElementById('map') === null) {
-            document.getElementById('mapDiv').style.backgroundColor = 'black';
-        }
+
+	        if (document.getElementsByClassName('flex-item').length === 0) {
+	            document.getElementById('topContacts').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementsByTagName('h1').length === 0) {
+	            document.getElementById('header').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementsByClassName('work-entry').length === 0) {
+	            document.getElementById('workExperience').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementsByClassName('project-entry').length === 0) {
+	            document.getElementById('projects').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementsByClassName('education-entry').length === 0) {
+	            document.getElementById('education').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementsByClassName('flex-item').length === 0) {
+	            document.getElementById('lets-connect').style.backgroundColor = 'black';
+	        }
+	        if (document.getElementById('map') === null) {
+	            document.getElementById('mapDiv').style.backgroundColor = 'black';
+	        }
+
+				});
+
     </script>
 </body>
 
